Added new files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # Fichier contenant des informations confidentielles
 .env
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+/vendor
+.idea/
+.DS_Store
